UI: enforce full grayscale palette and gray buttons; remove residual chroma in docs, components, and apps

--- a/docs/tutorial-basics/markdown-features.mdx
+++ b/docs/tutorial-basics/markdown-features.mdx
@@ -126,9 +126,9 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-This is <Highlight color="#25c2a0">Docusaurus green</Highlight> !
+This is <Highlight color="#999999">Docusaurus gray</Highlight> !
 
-This is <Highlight color="#1877F2">Facebook blue</Highlight> !
+This is <Highlight color="#666666">Neutral gray</Highlight> !
 ```
 
 export const Highlight = ({children, color}) => (
@@ -147,6 +147,6 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-This is <Highlight color="#25c2a0">Docusaurus green</Highlight> !
+This is <Highlight color="#999999">Docusaurus gray</Highlight> !
 
-This is <Highlight color="#1877F2">Facebook blue</Highlight> !
+This is <Highlight color="#666666">Neutral gray</Highlight> !
