--- a/src/pages/resources.mdx
+++ b/src/pages/resources.mdx
@@ -3,53 +3,133 @@ title: Learning Resources
 ---
 import Link from '@docusaurus/Link';
 
-# 学习资源
+# Learning Resources
 
 <div className="app-grid" style={{gridTemplateColumns: 'repeat(2, minmax(0, 1fr))'}}>
   <div className="app-card">
-    <h3 className="app-section-title">植物表型</h3>
+    <h3 className="app-section-title">Plant Phenotyping</h3>
     <ul>
-      <li><a href="https://plantcv.danforthcenter.org/" target="_blank" rel="noopener">PlantCV</a> —— 植物表型图像分析的 Python 工具集</li>
-      <li><a href="https://imagej.net/software/fiji" target="_blank" rel="noopener">Fiji (ImageJ)</a> —— 开源图像处理平台，插件生态丰富</li>
-      <li><a href="https://open3d.org/" target="_blank" rel="noopener">Open3D</a> —— 点云/网格处理与可视化库</li>
-      <li><a href="https://www.openmv.net/" target="_blank" rel="noopener">OpenMV</a> —— 便捷的嵌入式机器视觉平台</li>
+      <li><a href="https://plantcv.danforthcenter.org/" target="_blank" rel="noopener">PlantCV</a> — Python toolkit for plant image analysis</li>
+      <li><a href="https://imagej.net/software/fiji" target="_blank" rel="noopener">Fiji (ImageJ)</a> — Open-source image processing platform with rich plugins</li>
+      <li><a href="https://open3d.org/" target="_blank" rel="noopener">Open3D</a> — Point cloud/mesh processing and visualization library</li>
+      <li><a href="https://www.openmv.net/" target="_blank" rel="noopener">OpenMV</a> — Convenient embedded machine vision platform</li>
     </ul>
   </div>
 
   <div className="app-card">
-    <h3 className="app-section-title">植物模型</h3>
+    <h3 className="app-section-title">Plant Modeling</h3>
     <ul>
-      <li><a href="https://github.com/OpenSimRoot/OpenSimRoot" target="_blank" rel="noopener">OpenSimRoot</a> —— 根系功能—结构模型与仿真</li>
-      <li><a href="https://github.com/biocro/biocro" target="_blank" rel="noopener">BioCro</a> —— R 语言作物生长与生理模型</li>
-      <li><a href="https://openalea.readthedocs.io/" target="_blank" rel="noopener">OpenAlea</a> —— 植物建模与植物结构生成平台</li>
-      <li><a href="https://threejs.org/" target="_blank" rel="noopener">Three.js</a> —— WebGL 3D 可视化与交互</li>
+      <li><a href="https://github.com/OpenSimRoot/OpenSimRoot" target="_blank" rel="noopener">OpenSimRoot</a> — Functional–structural root model and simulation</li>
+      <li><a href="https://github.com/biocro/biocro" target="_blank" rel="noopener">BioCro</a> — Crop growth and physiology model in R</li>
+      <li><a href="https://openalea.readthedocs.io/" target="_blank" rel="noopener">OpenAlea</a> — Plant modeling and structure generation platform</li>
+      <li><a href="https://threejs.org/" target="_blank" rel="noopener">Three.js</a> — WebGL 3D visualization and interaction</li>
     </ul>
   </div>
 
   <div className="app-card">
     <h3 className="app-section-title">AI Agent</h3>
     <ul>
-      <li><a href="https://www.langchain.com/" target="_blank" rel="noopener">LangChain</a> —— LLM 工程框架，支持工具/Agent 编排</li>
-      <li><a href="https://www.llamaindex.ai/" target="_blank" rel="noopener">LlamaIndex</a> —— 数据连接与检索增强，面向 Agent 应用</li>
-      <li><a href="https://github.com/microsoft/autogen" target="_blank" rel="noopener">Microsoft AutoGen</a> —— 多智能体协同执行框架</li>
-      <li><a href="https://huggingface.co/docs/transformers/index" target="_blank" rel="noopener">Transformers</a> —— 预训练模型与推理微调工具库</li>
+      <li><a href="https://www.langchain.com/" target="_blank" rel="noopener">LangChain</a> — LLM engineering framework with tool/agent orchestration</li>
+      <li><a href="https://www.llamaindex.ai/" target="_blank" rel="noopener">LlamaIndex</a> — Data connectors and retrieval-augmented pipelines for agent apps</li>
+      <li><a href="https://github.com/microsoft/autogen" target="_blank" rel="noopener">Microsoft AutoGen</a> — Multi-agent collaborative execution framework</li>
+      <li><a href="https://huggingface.co/docs/transformers/index" target="_blank" rel="noopener">Transformers</a> — Library for pretrained models, fine-tuning and inference</li>
     </ul>
   </div>
 
   <div className="app-card">
-    <h3 className="app-section-title">无人机遥感</h3>
+    <h3 className="app-section-title">UAV Remote Sensing</h3>
     <ul>
-      <li><a href="https://www.opendronemap.org/" target="_blank" rel="noopener">OpenDroneMap</a> —— 开源摄影测量套件，生成正射与点云</li>
-      <li><a href="https://www.qgis.org/" target="_blank" rel="noopener">QGIS</a> —— 开源 GIS 平台，空间分析与可视化</li>
-      <li><a href="https://gdal.org/" target="_blank" rel="noopener">GDAL</a> —— 栅格/矢量地理数据处理库</li>
-      <li><a href="https://www.agisoft.com/" target="_blank" rel="noopener">Agisoft Metashape</a> —— 商业摄影测量软件，精度与易用性强</li>
-      <li><a href="https://www.pix4d.com/" target="_blank" rel="noopener">Pix4D</a> —— 商业航测与建模方案</li>
+      <li><a href="https://www.opendronemap.org/" target="_blank" rel="noopener">OpenDroneMap</a> — Open-source photogrammetry suite for orthomosaics and point clouds</li>
+      <li><a href="https://www.qgis.org/" target="_blank" rel="noopener">QGIS</a> — Open-source GIS platform for spatial analysis and visualization</li>
+      <li><a href="https://gdal.org/" target="_blank" rel="noopener">GDAL</a> — Geospatial raster/vector data processing library</li>
+      <li><a href="https://www.agisoft.com/" target="_blank" rel="noopener">Agisoft Metashape</a> — Commercial photogrammetry software with strong accuracy and usability</li>
+      <li><a href="https://www.pix4d.com/" target="_blank" rel="noopener">Pix4D</a> — Commercial surveying and modeling solutions</li>
     </ul>
   </div>
 </div>
 
-## 数据获取
+## Data Access
 
-- <a href="https://earthexplorer.usgs.gov/" target="_blank" rel="noopener">USGS EarthExplorer</a>
-- <a href="https://lpdaac.usgs.gov/" target="_blank" rel="noopener">NASA LP DAAC</a> —— MODIS/VIIRS 等陆地过程数据
-- <a href="https://dataspace.copernicus.eu/" target="_blank" rel="noopener">Copernicus Data Space Ecosystem</a> —— Sentinel 系列数据访问
+- <a href="https://earthexplorer.usgs.gov/" target="_blank" rel="noopener">USGS EarthExplorer</a> — Search and download satellite imagery (e.g., Landsat)
+- <a href="https://lpdaac.usgs.gov/" target="_blank" rel="noopener">NASA LP DAAC</a> — MODIS/VIIRS land-process datasets
+- <a href="https://dataspace.copernicus.eu/" target="_blank" rel="noopener">Copernicus Data Space Ecosystem</a> — Access to Sentinel missions
+
+<div className="app-grid" style={{gridTemplateColumns: 'repeat(2, minmax(0, 1fr))', marginTop: 16}}>
+  <div className="app-card">
+    <h3 className="app-section-title">Crop Photosynthesis & Crop Models</h3>
+    <ul>
+      <li><a href="https://www.springer.com/journal/11120" target="_blank" rel="noopener">Photosynthesis Research</a> — Journal on mechanisms to canopy-scale modeling</li>
+      <li><a href="https://www.sciencedirect.com/journal/plant-phenomics" target="_blank" rel="noopener">Plant Phenomics (AAAS)</a> — High-throughput phenotyping, 3D reconstruction, sensors & AI</li>
+      <li><a href="https://dssat.net" target="_blank" rel="noopener">DSSAT</a> — Integrated crop simulation (growth, photosynthesis, water–nutrient, yield)</li>
+      <li><a href="https://www.apsim.info" target="_blank" rel="noopener">APSIM</a> — Agro-ecosystem modeling for crop–soil–climate coupling</li>
+    </ul>
+  </div>
+
+  <div className="app-card">
+    <h3 className="app-section-title">UAV & Remote Sensing Platforms</h3>
+    <ul>
+      <li><a href="https://earthdata.nasa.gov" target="_blank" rel="noopener">NASA Earthdata</a> — MODIS, Landsat, SMAP, SIF, ET and more key datasets</li>
+      <li><a href="https://earthengine.google.com" target="_blank" rel="noopener">Google Earth Engine</a> — Cloud-scale time-series monitoring and analysis</li>
+      <li><a href="https://www.dji.com/terra" target="_blank" rel="noopener">DJI Terra</a> — Photogrammetry and 3D reconstruction for field plots</li>
+    </ul>
+  </div>
+
+  <div className="app-card">
+    <h3 className="app-section-title">3D Reconstruction & Point Cloud</h3>
+    <ul>
+      <li><a href="https://www.agisoft.com" target="_blank" rel="noopener">Agisoft Metashape</a> — Industry-standard photogrammetry for plants/canopies</li>
+      <li><a href="https://www.danielgm.net/cc" target="_blank" rel="noopener">CloudCompare</a> — Registration, slicing, segmentation, normals and metrics</li>
+      <li><a href="http://www.open3d.org" target="_blank" rel="noopener">Open3D</a> — Open-source point cloud framework for research</li>
+    </ul>
+  </div>
+
+  <div className="app-card">
+    <h3 className="app-section-title">AI & Machine Learning</h3>
+    <ul>
+      <li><a href="https://paperswithcode.com" target="_blank" rel="noopener">Papers with Code</a> — Track SOTA algorithms and datasets</li>
+      <li><a href="https://huggingface.co" target="_blank" rel="noopener">Hugging Face</a> — Models for CV, multimodal and LLM deployment</li>
+      <li><a href="https://pytorch.org" target="_blank" rel="noopener">PyTorch</a> — Mainstream deep learning framework for segmentation & inversion</li>
+    </ul>
+  </div>
+
+  <div className="app-card">
+    <h3 className="app-section-title">Image Processing & Scientific Computing</h3>
+    <ul>
+      <li><a href="https://opencv.org" target="_blank" rel="noopener">OpenCV</a> — Image processing, calibration, stereo reconstruction</li>
+      <li><a href="https://www.mathworks.com" target="_blank" rel="noopener">MATLAB</a> — Scientific computing for modeling and simulation</li>
+    </ul>
+  </div>
+
+  <div className="app-card">
+    <h3 className="app-section-title">Academic Search & Literature</h3>
+    <ul>
+      <li><a href="https://scholar.google.com" target="_blank" rel="noopener">Google Scholar</a> — Academic search with citation tracking</li>
+      <li><a href="https://www.webofscience.com" target="_blank" rel="noopener">Web of Science</a> — Bibliometrics, impact factors and evaluation</li>
+    </ul>
+  </div>
+
+  <div className="app-card">
+    <h3 className="app-section-title">Scientific Plotting & Visualization</h3>
+    <ul>
+      <li><a href="https://www.originlab.com" target="_blank" rel="noopener">Origin</a> — Classic plotting for agriculture, biology and environment</li>
+      <li><a href="https://www.graphpad.com" target="_blank" rel="noopener">GraphPad Prism</a> — Biostatistics and experimental visualization</li>
+    </ul>
+  </div>
+
+  <div className="app-card">
+    <h3 className="app-section-title">Open Source & Research Code</h3>
+    <ul>
+      <li><a href="https://github.com" target="_blank" rel="noopener">GitHub</a> — Code hosting for algorithms, web apps and tools</li>
+    </ul>
+  </div>
+</div>
+
+## About This Page
+
+This resources page curates materials for the following research directions:
+
+- Digital crop photosynthetic phenotyping
+- Canopy light distribution and photosynthesis process modeling
+- Multi-view 3D reconstruction and point-cloud phenotyping
+- UAV remote sensing and multi-source data fusion
+- AI-driven intelligent crop phenomics analysis
